{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 30,
  "lineage": "abd5bc22-4bf6-1b02-4186-cf88f6f8ebdb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:541131174731:instance/i-0d924f73946a29826",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d924f73946a29826",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-08ab50b2a683db1bb",
            "private_dns": "ip-172-31-35-4.ec2.internal",
            "private_ip": "172.31.35.4",
            "public_dns": "ec2-52-203-2-252.compute-1.amazonaws.com",
            "public_ip": "52.203.2.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-067624040370717b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d40e5088",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed96d7dc87bdbbbb"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:541131174731:instance/i-008883b055d8c35be",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-008883b055d8c35be",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-09c7dd3ba1481e4e4",
            "private_dns": "ip-172-31-38-20.ec2.internal",
            "private_ip": "172.31.38.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dfa4ca8c13586559",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d40e5088",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed96d7dc87bdbbbb"
            ]
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:541131174731:instance/i-07812605398a6e565",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07812605398a6e565",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-093d9392c24d4814a",
            "private_dns": "ip-172-31-37-158.ec2.internal",
            "private_ip": "172.31.37.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dadba7dbcce5acaf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d40e5088",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed96d7dc87bdbbbb"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:541131174731:instance/i-020ad4098ff9393b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-020ad4098ff9393b0",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-05befe56a1f00e2b0",
            "private_dns": "ip-172-31-45-134.ec2.internal",
            "private_ip": "172.31.45.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f3acd2e16baf2182",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d40e5088",
            "tags": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed96d7dc87bdbbbb"
            ]
          },
          "depends_on": [
            "aws_s3_bucket.dev4",
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:541131174731:instance/i-0c04b5e8b0d71ad19",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c04b5e8b0d71ad19",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-01539c9e3bcc0dd06",
            "private_dns": "ip-172-31-43-148.ec2.internal",
            "private_ip": "172.31.43.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08a83b90d8a9fa7d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d40e5088",
            "tags": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed96d7dc87bdbbbb"
            ]
          },
          "depends_on": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c03f7f7f2ec15c3",
            "arn": "arn:aws:ec2:us-east-2:541131174731:instance/i-0ff4c04f1d8711941",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ff4c04f1d8711941",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-025c2988bfaffd6fe",
            "private_dns": "ip-172-31-37-130.us-east-2.compute.internal",
            "private_ip": "172.31.37.130",
            "public_dns": "ec2-18-189-28-201.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.28.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d47c986802bc621c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-us-east-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-95b709d9",
            "tags": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01408a0016c01428d"
            ]
          },
          "depends_on": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541131174731:security-group/sg-0ed96d7dc87bdbbbb",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0ed96d7dc87bdbbbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "189.120.79.102/32",
                  "189.120.79.103/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": null,
            "owner_id": "541131174731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-4eb1df34"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541131174731:security-group/sg-01408a0016c01428d",
            "description": "acesso-ssh-us-east-2",
            "egress": [],
            "id": "sg-01408a0016c01428d",
            "ingress": [
              {
                "cidr_blocks": [
                  "189.120.79.102/32",
                  "189.120.79.103/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-us-east-2",
            "name_prefix": null,
            "owner_id": "541131174731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-2f14e544"
          }
        }
      ]
    }
  ]
}